# vala-example

./: Makefile.am  README  configure.ac
data/: exampleapp.gresource.xml  gears-menu.ui  org.gtk.exampleapp.gschema.xml  window.ui
docs/: vala-example.css  vala.xml
src/: application-window.vala  application.vala
